--- a/turtaganai/css/main.css
+++ b/turtaganai/css/main.css
@@ -1160,18 +1160,268 @@ body {
       ._footer_block_social a:nth-child(3):before {
         content: url("../img/icon/vk.png"); }
 
+.navbar-toggle {
+  display: none; }
+
 /*==========  Desktop First  ==========*/
 /* Large Devices, Wide Screens */
 @media only screen and (max-width: 1200px) {
-  /**/ }
+  ._header_top_menu ul {
+    padding-left: 0;
+    padding-right: 0; }
+  ._header_top_contacts button {
+    width: 150px; }
+  ._header_top_contacts a span {
+    font-size: 20px; }
+  .slick-next {
+    right: 0; }
+  .slick-prev {
+    left: 0; }
+  ._form_bag {
+    width: 262px;
+    right: -111px; }
+  ._guides_block {
+    padding-left: 40px;
+    padding-right: 40px; }
+  ._direction_block_title img:nth-child(1) {
+    -o-object-fit: none;
+       object-fit: none; } }
 
 /* Medium Devices, Desktops */
 @media only screen and (max-width: 992px) {
-  /**/ }
+  ._header_top .row {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column; }
+  ._header_top_menu ul li {
+    padding-left: 15px;
+    padding-right: 15px; }
+  ._header_top_menu {
+    padding-top: 15px;
+    padding-bottom: 15px; }
+  ._header_top_contacts {
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flex;
+    display: -o-flex;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center; }
+    ._header_top_contacts a {
+      margin-left: 10px;
+      margin-right: 10px; }
+  ._header_main {
+    padding-top: 145px;
+    padding-bottom: 145px;
+    text-align: center; }
+  ._header_main_block {
+    padding-left: 0; }
+  ._header_main_block button {
+    margin-top: 40px; }
+  ._header_main .slick-dots {
+    bottom: -100px; }
+  ._direction_block_title img:nth-child(1) {
+    -o-object-fit: cover;
+       object-fit: cover; }
+  ._direction_block {
+    margin-bottom: 30px;
+    margin-top: 30px; }
+  ._reviews_block {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column; }
+  ._reviews .slick-dots {
+    bottom: -127px; }
+  ._reviews {
+    padding-bottom: 85px; }
+  ._form_block_title h4 {
+    font-size: 24px; }
+  ._form_block_sell {
+    padding-left: 30px;
+    padding-right: 30px; }
+  ._form_bag {
+    width: 225px; }
+  ._guides_block_list {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column; }
+  ._guides_block {
+    padding-top: 50px; }
+  ._aboutautor_block {
+    padding-right: 15px; } }
 
 /* Small Devices, Tablets */
 @media only screen and (max-width: 768px) {
-  /**/ }
+  ._footer {
+    padding-bottom: 180px;
+    padding-top: 150px; }
+    ._footer:after {
+      -webkit-transform: translateY(-86.5%);
+          -ms-transform: translateY(-86.5%);
+              transform: translateY(-86.5%); }
+  ._aboutautor {
+    margin-bottom: 0; }
+  ._header_top_contacts a {
+    margin-left: 0;
+    margin-right: 0;
+    margin-bottom: 5px; }
+    ._header_top_contacts a span {
+      font-size: 16px; }
+  ._header_top_contacts {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column; }
+  ._header_top_menu ul li {
+    display: block;
+    text-align: center; }
+    ._header_top_menu ul li a {
+      font-size: 14px;
+      text-decoration: none; }
+  ._header_top_menu {
+    min-height: 40px; }
+  ._header_top_menu ul {
+    display: none;
+    margin-top: 20px; }
+  .navbar-toggle {
+    display: block;
+    background-color: red;
+    float: none;
+    margin: 0 auto;
+    background-color: transparent;
+    border-color: white; }
+    .navbar-toggle span {
+      background-color: white; }
+  ._header_main_block h2 {
+    font-size: 48px; }
+  ._header_main_block p {
+    font-size: 16px; }
+  .slick-next {
+    right: -30px; }
+  .slick-prev {
+    left: -30px; }
+  ._header_main {
+    padding-top: 80px; }
+  ._header_main {
+    padding-bottom: 80px; }
+  ._header_main .slick-dots {
+    bottom: -60px; }
+  ._header_main_block {
+    padding-left: 5px;
+    padding-right: 5px; }
+  ._direction h4 {
+    margin-top: 35px; }
+  ._direction {
+    padding-bottom: 35px; }
+  ._reviews_slider_block {
+    padding-left: 10px;
+    padding-right: 10px; }
+  ._reviews {
+    padding-top: 45px; }
+  ._reviews_title {
+    margin-bottom: 40px; }
+  ._reviews_block_left img {
+    width: 240px;
+    margin-bottom: 10px; }
+  ._reviews_block {
+    padding-left: 0px;
+    padding-right: 0px; }
+  ._reviews_block_right {
+    padding-right: 20px;
+    padding-left: 20px; }
+  ._reviews_block_right span {
+    font-size: 16px; }
+  ._reviews_block_right a {
+    text-align: center; }
+  ._form .container {
+    padding-left: 0;
+    padding-right: 0; }
+  ._form_block_sell form {
+    padding-top: 30px; }
+  ._form_bag {
+    display: none; }
+  ._guides {
+    padding-top: 60px; }
+  ._aboutautor_block {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    padding-top: 40px; }
+  ._aboutautor_block_left {
+    width: 100%; }
+    ._aboutautor_block_left img {
+      width: 240px;
+      display: block;
+      margin: 0 auto;
+      margin-bottom: 10px; }
+  ._aboutautor_block {
+    padding-left: 0px;
+    padding-right: 0px; }
+  ._aboutautor_block_right {
+    padding-right: 20px;
+    padding-left: 20px; }
+  ._aboutautor_block_right button {
+    margin: 0 auto;
+    margin-top: 25px; }
+  ._footer_block {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center; }
+  ._footer {
+    padding-bottom: 122px;
+    padding-top: 62px; }
+  ._footer_block {
+    padding-left: 0;
+    padding-right: 0; }
+  ._footer_block_contacts {
+    padding-left: 20px; }
+  ._header, ._reviews {
+    overflow: hidden; }
+  ._form {
+    overflow: hidden; }
+  .loadMore {
+    text-align: center; }
+    .loadMore .row {
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -webkit-flex-direction: column;
+          -ms-flex-direction: column;
+              flex-direction: column;
+      -webkit-box-pack: center;
+      -webkit-justify-content: center;
+          -ms-flex-pack: center;
+              justify-content: center;
+      -webkit-box-align: center;
+      -webkit-align-items: center;
+          -ms-flex-align: center;
+              align-items: center; }
+  ._direction_block_title img:nth-child(1) {
+    left: 0; }
+  ._direction_block_info ul {
+    text-align: left; } }
 
 /* Extra Small Devices, Phones */
 @media only screen and (max-width: 480px) {
