--- a/turtaganai/sass/main.sass
+++ b/turtaganai/sass/main.sass
@@ -1520,4 +1520,7 @@
 	span
 		line-height: 38.46px;	
 /*END PAGE BLOG*/
+._direction_block
+	a
+		text-decoration: none
 @import "media" // Всегда в конце
