--- a/turtaganai/sass/_media.sass
+++ b/turtaganai/sass/_media.sass
@@ -162,6 +162,10 @@
 		text-align: center
 /* Small Devices, Tablets */
 @media only screen and (max-width : 768px)
+	._aboutautor_block_right ._aboutautor_block_right_btn
+		margin: 0 auto
+		margin-top: 20px
+
 	._header_spec ._header_main_block h2
 		font-size: 35px
 
