--- a/turtaganai/css/main.css
+++ b/turtaganai/css/main.css
@@ -1,3 +1,4 @@
+@import url("https://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css");
 @font-face {
   font-family: 'RonduitCapitals-Light';
   src: url("../fonts/RonduitCapitals-Light.otf"); }
