--- a/turtaganai/sass/main.sass
+++ b/turtaganai/sass/main.sass
@@ -2,6 +2,7 @@
 @import "libs"
 @import "base"
 @import "vars"
+@import url("https://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css")
 // Пользовательские стили
 
 ._header
